assignments/DevOps/ssj/kubernetes/sample-app-k8s-manifest/manifests/deployment-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user
  name: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  strategy: {}
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - image: onikaze/sample-app-k8s-user:17
        name: user
        volumeMounts:
          - name: app-storage
            mountPath: /app/log
            subPath: log
          - name: app-storage
            mountPath: /app/db
            subPath: db
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-user-pvc
status: {}
