assignments/DevOps/ssj/kubernetes/sample-app-k8s-manifest/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 80
      - path: /notify
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
